# asyncDataRequestor

./: CMakeLists.txt  README.md  databaseService.cpp  databaseService.h  main.cpp  resultsStruct.cpp  resultsStruct.h
